﻿============== FOR VERSIONS ==============
oak 2.6.2+
oak-edge 2.0.2+
oak-json 1.1.3+
cambium 1.5.1+
gemini 1.2.9+
=============== CHANGES ==================
Gemini's Select method will now ignore properties passed to it that don't
exist as opposed to throwing an exception.

GeminiInfo (Gemini.ToString()) reported multiple null values as (circular),
this has been fixed.

Commit info:
https://github.com/amirrajan/Oak/blob/9546f49dfd8b21a7195d7daed06820aed30216ec/Oak/Gemini.cs#L788
https://github.com/amirrajan/Oak/blob/4047c3a9ab7c66a6d247f9569cee128c541861cc/Oak/GeminiInfo.cs#L32

============== FOR VERSIONS ==============
oak 2.6.0+
oak-edge 2.0.0+
cambium 1.4.9+

=============== CHANGES ==================
Validations module's FirstError() method will return null
if there are no errors.  Errors() collection no longer returns
List<KeyValuePair<string, string>> and instead returns a List of
Geminis who's properties are Key, and Value.

Commit info:
https://github.com/amirrajan/Oak/commit/35454f81f88fbfcb95f610a67aa8b7298c33c504


============== FOR VERSIONS ==============
oak 2.5.8+
oak-edge 1.9.7+
=============== CHANGES ==================
Added BaseController that you can inherit from. Redefines the Json
base method to use Oak's DynamicJsonResult.


============== FOR VERSIONS ==============
oak 2.5.7+
oak-edge 1.9.7+
oak-json 1.1.2+
=============== CHANGES ==================
Json serialization does camel casing by default, use the NoCasingChange class
in conjunction with the DynamicJsonResult to override this default behavior:

return new DynamicJsonResult(someObject)
{
	Casing = new NoCasingChange()
};


============== FOR VERSIONS ==============
oak 2.5.6+
oak-edge 1.9.6+
seed 1.1.0+
=============== CHANGES ==================
Added ability to declare tables with schemas:
https://github.com/amirrajan/Oak/blob/e2b476be0e253e1715b5093d82f9ead931f47f08/Oak.Tests/describe_Seed/schemas.cs